--- a/posts/2022-01-03-teste.md
+++ b/posts/2022-01-03-teste.md
@@ -1,13 +1,23 @@
 ---
-title: Teste
-description: Testando
+title: Jornada do herói
+description: A jornada do herói é a melhor forma de entender os mitos das religiões
 date: 2022-01-03 11:10:23
 image: assets/img/images-51-.jpeg
 category: Religião
 background: "#2E64FE"
 ---
-` O `
+`
 
-```
-jhjdjdjs
-```
+﻿﻿RESUMO: O mito do herói está presente nas mais variadas civilizações humanas, o mitólogo Campbell relaciona esse mito com o período da adolescência, ele defende que assim como o herói, o jovem também está saindo numa jornada heroica, foi essa ideia chave que guiou a estruturação do projeto.﻿
+
+### herói 
+
+`
+Herói é o termo atribuído ao ser humano que executa ações excepcionais, com coragem e bravura, com o intuito de solucionar situações críticas, tendo como base princípios morais e éticos.
+﻿
+O monomito (às vezes chamado de "Jornada do Herói") é um conceito de jornada cíclica presente em mitos, de acordo com o antropólogo Joseph Campbell.
+
+As 12 etapas da Jornada do Herói são: o mundo comum; o chamado à aventura; recusa do chamado; encontro com o mentor; a travessia do primeiro limiar; provas, aliados e inimigos; aproximação da caverna secreta; a provação; a recompensa; o caminho de volta; a ressurreição; e o retorno com o elixir.
+
+#
+`
