--- a/posts/2022-01-03-teste.md
+++ b/posts/2022-01-03-teste.md
@@ -1,5 +1,5 @@
 ---
-title: Jornada do herói
+title: jornada do heroi
 description: A jornada do herói é a melhor forma de entender os mitos das religiões
 date: 2022-01-03 11:10:23
 image: assets/img/images-51-.jpeg
